--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,27 @@
+###################################################
+### Database setup
+###################################################
 quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:your_db_name
-quarkus.datasource.username=sa
-quarkus.datasource.password=sa
-#quarkus.datasource.db-kind=mysql
-#quarkus.datasource.username=root
-#quarkus.datasource.password=root
-#quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/todo
+%dev.quarkus.datasource.db-kind=h2
+%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:your_db_name
+%dev.quarkus.datasource.username=sa
+%dev.quarkus.datasource.password=sa
+%prod.quarkus.datasource.db-kind=mysql
+%prod.quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME}
+%prod.quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD}
+%prod.quarkus.datasource.jdbc.url=${QUARKUS_DATASOURCE_JDBC_URL}
 
+###################################################
+### Password encoder
+###################################################
 com.ard333.quarkusjwt.password.secret=mysecret
 com.ard333.quarkusjwt.password.iteration=33
 com.ard333.quarkusjwt.password.keylength=256
 
+###################################################
+### JWT
+###################################################
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=https://quarkus.io/using-jwt-rbac
 quarkus.smallrye-jwt.enabled=true
