--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ com.ard333.quarkusjwt.password.keylength=256
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=https://quarkus.io/using-jwt-rbac
 quarkus.smallrye-jwt.enabled=true
+
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=/.*/
