Backend connected to the Oracle ATP Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,18 @@
 ###################################################
 quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.database.generation=drop-and-create
+
 %dev.quarkus.datasource.db-kind=h2
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:your_db_name
 %dev.quarkus.datasource.username=sa
 %dev.quarkus.datasource.password=sa
-%prod.quarkus.datasource.db-kind=mysql
-%prod.quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME}
-%prod.quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD}
-%prod.quarkus.datasource.jdbc.url=${QUARKUS_DATASOURCE_JDBC_URL}
+
+%prod.quarkus.datasource.db-kind=oracle
+%prod.quarkus.datasource.username=admin
+%prod.quarkus.datasource.password=ATPDataBase2024
+%prod.quarkus.datasource.jdbc.url=jdbc:oracle:thin:@atpdb_high?TNS_ADMIN=wallet
+%prod.quarkus.datasource.jdbc.driver=oracle.jdbc.OracleDriver
+%prod.quarkus.datasource.jdbc.max-size=8
 
 ###################################################
 ### Password encoder
@@ -26,6 +30,11 @@ mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=https://quarkus.io/using-jwt-rbac
 quarkus.smallrye-jwt.enabled=true
 
-
 quarkus.http.cors=true
 quarkus.http.cors.origins=/.*/
+quarkus.http.cors.methods=GET,POST,PUT,DELETE
+quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
+quarkus.http.cors.exposed-headers=Authorization,Link,X-Total-Count
+quarkus.http.cors.access-control-allow-credentials=true
+
+quarkus.container-image.build=true
